--- a/compose.yaml
+++ b/compose.yaml
@@ -2,8 +2,8 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=task_tracker_repository'
+      - 'POSTGRES_USER=postgres'
+      - 'POSTGRES_PASSWORD=4253'
     ports:
       - '5432'
