--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,13 @@
+---
+  server:
+    port: 8080
 
+  spring:
+    datasource:
+      url: jdbc:postgresql://localhost:5432/task_tracker_repository
+      username: postgres
+      password: 4253
+      driver-class-name: org.postgresql.Driver
+    jpa:
+      hibernate:
+        ddl-auto: update
